# cocotb-vga

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
sim/: Makefile
src/cocotb_vga/: __init__.py  assembler.py  bus.py  capture.py  frame.py  pattern.py  selftest.py  timing.py  video.py
src/cocotb_vga/verilog/: dummy_vga.v
tests/: test_assembler.py  test_bus.py  test_frame.py  test_timing.py
